Hot fix alignment

--- a/forms/styling/style.css
+++ b/forms/styling/style.css
@@ -32,6 +32,7 @@ ul {
 ul li {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 20px;
 }
 
